packages/antlr/src/PortugolParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PortugolListener } from "./PortugolListener.js";
import { PortugolVisitor } from "./PortugolVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PortugolParser extends antlr.Parser {
    public static readonly ABRE_PARENTESES = 1;
    public static readonly FECHA_PARENTESES = 2;
    public static readonly ABRE_COLCHETES = 3;
    public static readonly FECHA_COLCHETES = 4;
    public static readonly ABRE_CHAVES = 5;
    public static readonly FECHA_CHAVES = 6;
    public static readonly TIPO = 7;
    public static readonly FACA = 8;
    public static readonly ENQUANTO = 9;
    public static readonly PARA = 10;
    public static readonly SE = 11;
    public static readonly SENAO = 12;
    public static readonly CONSTANTE = 13;
    public static readonly FUNCAO = 14;
    public static readonly PROGRAMA = 15;
    public static readonly ESCOLHA = 16;
    public static readonly CASO = 17;
    public static readonly CONTRARIO = 18;
    public static readonly PARE = 19;
    public static readonly RETORNE = 20;
    public static readonly INCLUA = 21;
    public static readonly BIBLIOTECA = 22;
    public static readonly OP_NAO = 23;
    public static readonly OP_E_LOGICO = 24;
    public static readonly OP_OU_LOGICO = 25;
    public static readonly OP_SUBTRACAO = 26;
    public static readonly OP_ADICAO = 27;
    public static readonly OP_MULTIPLICACAO = 28;
    public static readonly OP_DIVISAO = 29;
    public static readonly OP_MOD = 30;
    public static readonly OP_ATRIBUICAO = 31;
    public static readonly OP_IGUALDADE = 32;
    public static readonly OP_DIFERENCA = 33;
    public static readonly OP_MAIOR = 34;
    public static readonly OP_MENOR = 35;
    public static readonly OP_MENOR_IGUAL = 36;
    public static readonly OP_MAIOR_IGUAL = 37;
    public static readonly OP_INCREMENTO_UNARIO = 38;
    public static readonly OP_DECREMENTO_UNARIO = 39;
    public static readonly OP_SHIFT_LEFT = 40;
    public static readonly OP_SHIFT_RIGHT = 41;
    public static readonly OP_XOR = 42;
    public static readonly OP_OU_BITWISE = 43;
    public static readonly OP_NOT_BITWISE = 44;
    public static readonly OP_ALIAS_BIBLIOTECA = 45;
    public static readonly E_COMERCIAL = 46;
    public static readonly OP_MAIS_IGUAL = 47;
    public static readonly OP_MENOS_IGUAL = 48;
    public static readonly OP_MULTIPLICACAO_IGUAL = 49;
    public static readonly OP_DIVISAO_IGUAL = 50;
    public static readonly LOGICO = 51;
    public static readonly VERDADEIRO = 52;
    public static readonly FALSO = 53;
    public static readonly CARACTER = 54;
    public static readonly STRING = 55;
    public static readonly ID = 56;
    public static readonly REAL = 57;
    public static readonly INT = 58;
    public static readonly HEXADECIMAL = 59;
    public static readonly COMENTARIO = 60;
    public static readonly COMENTARIO_SIMPLES = 61;
    public static readonly WS = 62;
    public static readonly PONTO = 63;
    public static readonly VIRGULA = 64;
    public static readonly PONTOVIRGULA = 65;
    public static readonly DOISPONTOS = 66;
    public static readonly RULE_arquivo = 0;
    public static readonly RULE_inclusaoBiblioteca = 1;
    public static readonly RULE_listaDeclaracoes = 2;
    public static readonly RULE_declaracao = 3;
    public static readonly RULE_declaracaoVariavel = 4;
    public static readonly RULE_declaracaoMatriz = 5;
    public static readonly RULE_inicializacaoMatriz = 6;
    public static readonly RULE_linhaMatriz = 7;
    public static readonly RULE_colunaMatriz = 8;
    public static readonly RULE_declaracaoArray = 9;
    public static readonly RULE_inicializacaoArray = 10;
    public static readonly RULE_tamanhoArray = 11;
    public static readonly RULE_declaracaoFuncao = 12;
    public static readonly RULE_parametroFuncao = 13;
    public static readonly RULE_listaParametros = 14;
    public static readonly RULE_parametro = 15;
    public static readonly RULE_parametroArray = 16;
    public static readonly RULE_parametroMatriz = 17;
    public static readonly RULE_comando = 18;
    public static readonly RULE_atribuicao = 19;
    public static readonly RULE_atribuicaoComposta = 20;
    public static readonly RULE_retorne = 21;
    public static readonly RULE_se = 22;
    public static readonly RULE_senao = 23;
    public static readonly RULE_enquanto = 24;
    public static readonly RULE_facaEnquanto = 25;
    public static readonly RULE_para = 26;
    public static readonly RULE_listaComandos = 27;
    public static readonly RULE_inicializacaoPara = 28;
    public static readonly RULE_condicao = 29;
    public static readonly RULE_incrementoPara = 30;
    public static readonly RULE_escolha = 31;
    public static readonly RULE_caso = 32;
    public static readonly RULE_pare = 33;
    public static readonly RULE_indiceArray = 34;
    public static readonly RULE_expressao = 35;
    public static readonly RULE_listaExpressoes = 36;
    public static readonly RULE_escopoBiblioteca = 37;

    public static readonly literalNames = [
        null, "'('", "')'", "'['", "']'", "'{'", "'}'", null, "'faca'", 
        "'enquanto'", "'para'", "'se'", "'senao'", "'const'", "'funcao'", 
        "'programa'", "'escolha'", "'caso'", "'contrario'", "'pare'", "'retorne'", 
        "'inclua'", "'biblioteca'", "'nao'", "'e'", "'ou'", "'-'", "'+'", 
        "'*'", "'/'", "'%'", "'='", "'=='", "'!='", "'>'", "'<'", "'<='", 
        "'>='", "'++'", "'--'", "'<<'", "'>>'", "'^'", "'|'", "'~'", "'-->'", 
        "'&'", "'+='", "'-='", "'*='", "'/='", null, "'verdadeiro'", "'falso'", 
        null, null, null, null, null, null, null, null, null, "'.'", "','", 
        "';'", "':'"
    ];

    public static readonly symbolicNames = [
        null, "ABRE_PARENTESES", "FECHA_PARENTESES", "ABRE_COLCHETES", "FECHA_COLCHETES", 
        "ABRE_CHAVES", "FECHA_CHAVES", "TIPO", "FACA", "ENQUANTO", "PARA", 
        "SE", "SENAO", "CONSTANTE", "FUNCAO", "PROGRAMA", "ESCOLHA", "CASO", 
        "CONTRARIO", "PARE", "RETORNE", "INCLUA", "BIBLIOTECA", "OP_NAO", 
        "OP_E_LOGICO", "OP_OU_LOGICO", "OP_SUBTRACAO", "OP_ADICAO", "OP_MULTIPLICACAO", 
        "OP_DIVISAO", "OP_MOD", "OP_ATRIBUICAO", "OP_IGUALDADE", "OP_DIFERENCA", 
        "OP_MAIOR", "OP_MENOR", "OP_MENOR_IGUAL", "OP_MAIOR_IGUAL", "OP_INCREMENTO_UNARIO", 
        "OP_DECREMENTO_UNARIO", "OP_SHIFT_LEFT", "OP_SHIFT_RIGHT", "OP_XOR", 
        "OP_OU_BITWISE", "OP_NOT_BITWISE", "OP_ALIAS_BIBLIOTECA", "E_COMERCIAL", 
        "OP_MAIS_IGUAL", "OP_MENOS_IGUAL", "OP_MULTIPLICACAO_IGUAL", "OP_DIVISAO_IGUAL", 
        "LOGICO", "VERDADEIRO", "FALSO", "CARACTER", "STRING", "ID", "REAL", 
        "INT", "HEXADECIMAL", "COMENTARIO", "COMENTARIO_SIMPLES", "WS", 
        "PONTO", "VIRGULA", "PONTOVIRGULA", "DOISPONTOS"
    ];
    public static readonly ruleNames = [
        "arquivo", "inclusaoBiblioteca", "listaDeclaracoes", "declaracao", 
        "declaracaoVariavel", "declaracaoMatriz", "inicializacaoMatriz", 
        "linhaMatriz", "colunaMatriz", "declaracaoArray", "inicializacaoArray", 
        "tamanhoArray", "declaracaoFuncao", "parametroFuncao", "listaParametros", 
        "parametro", "parametroArray", "parametroMatriz", "comando", "atribuicao", 
        "atribuicaoComposta", "retorne", "se", "senao", "enquanto", "facaEnquanto", 
        "para", "listaComandos", "inicializacaoPara", "condicao", "incrementoPara", 
        "escolha", "caso", "pare", "indiceArray", "expressao", "listaExpressoes", 
        "escopoBiblioteca",
    ];

    public get grammarFileName(): string { return "Portugol.g4"; }
    public get literalNames(): (string | null)[] { return PortugolParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PortugolParser.symbolicNames; }
    public get ruleNames(): string[] { return PortugolParser.ruleNames; }
    public get serializedATN(): number[] { return PortugolParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PortugolParser._ATN, PortugolParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public arquivo(): ArquivoContext {
        let localContext = new ArquivoContext(this.context, this.state);
        this.enterRule(localContext, 0, PortugolParser.RULE_arquivo);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 76;
            this.match(PortugolParser.PROGRAMA);
            this.state = 77;
            this.match(PortugolParser.ABRE_CHAVES);
            this.state = 81;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 21) {
                {
                {
                this.state = 78;
                this.inclusaoBiblioteca();
                }
                }
                this.state = 83;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 24704) !== 0)) {
                {
                this.state = 86;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case PortugolParser.FUNCAO:
                    {
                    this.state = 84;
                    this.declaracaoFuncao();
                    }
                    break;
                case PortugolParser.TIPO:
                case PortugolParser.CONSTANTE:
                    {
                    this.state = 85;
                    this.listaDeclaracoes();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 91;
            this.match(PortugolParser.FECHA_CHAVES);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public inclusaoBiblioteca(): InclusaoBibliotecaContext {
        let localContext = new InclusaoBibliotecaContext(this.context, this.state);
        this.enterRule(localContext, 2, PortugolParser.RULE_inclusaoBiblioteca);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 93;
            this.match(PortugolParser.INCLUA);
            this.state = 94;
            this.match(PortugolParser.BIBLIOTECA);
            this.state = 95;
            this.match(PortugolParser.ID);
            this.state = 98;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 45) {
                {
                this.state = 96;
                this.match(PortugolParser.OP_ALIAS_BIBLIOTECA);
                this.state = 97;
                this.match(PortugolParser.ID);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public listaDeclaracoes(): ListaDeclaracoesContext {
        let localContext = new ListaDeclaracoesContext(this.context, this.state);
        this.enterRule(localContext, 4, PortugolParser.RULE_listaDeclaracoes);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 13) {
                {
                this.state = 100;
                this.match(PortugolParser.CONSTANTE);
                }
            }

            this.state = 103;
            this.match(PortugolParser.TIPO);
            this.state = 104;
            this.declaracao();
            this.state = 109;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 64) {
                {
                {
                this.state = 105;
                this.match(PortugolParser.VIRGULA);
                this.state = 106;
                this.declaracao();
                }
                }
                this.state = 111;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaracao(): DeclaracaoContext {
        let localContext = new DeclaracaoContext(this.context, this.state);
        this.enterRule(localContext, 6, PortugolParser.RULE_declaracao);
        try {
            this.state = 115;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 112;
                this.declaracaoVariavel();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 113;
                this.declaracaoArray();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 114;
                this.declaracaoMatriz();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaracaoVariavel(): DeclaracaoVariavelContext {
        let localContext = new DeclaracaoVariavelContext(this.context, this.state);
        this.enterRule(localContext, 8, PortugolParser.RULE_declaracaoVariavel);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 117;
            this.match(PortugolParser.ID);
            this.state = 120;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 118;
                this.match(PortugolParser.OP_ATRIBUICAO);
                this.state = 119;
                this.expressao(0);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaracaoMatriz(): DeclaracaoMatrizContext {
        let localContext = new DeclaracaoMatrizContext(this.context, this.state);
        this.enterRule(localContext, 10, PortugolParser.RULE_declaracaoMatriz);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 122;
            this.match(PortugolParser.ID);
            this.state = 123;
            this.match(PortugolParser.ABRE_COLCHETES);
            this.state = 125;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 209715202) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 4137027) !== 0)) {
                {
                this.state = 124;
                this.linhaMatriz();
                }
            }

            this.state = 127;
            this.match(PortugolParser.FECHA_COLCHETES);
            this.state = 128;
            this.match(PortugolParser.ABRE_COLCHETES);
            this.state = 130;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 209715202) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 4137027) !== 0)) {
                {
                this.state = 129;
                this.colunaMatriz();
                }
            }

            this.state = 132;
            this.match(PortugolParser.FECHA_COLCHETES);
            this.state = 135;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 133;
                this.match(PortugolParser.OP_ATRIBUICAO);
                this.state = 134;
                this.inicializacaoMatriz();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public inicializacaoMatriz(): InicializacaoMatrizContext {
        let localContext = new InicializacaoMatrizContext(this.context, this.state);
        this.enterRule(localContext, 12, PortugolParser.RULE_inicializacaoMatriz);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 137;
            this.match(PortugolParser.ABRE_CHAVES);
            this.state = 138;
            this.inicializacaoArray();
            this.state = 143;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 64) {
                {
                {
                this.state = 139;
                this.match(PortugolParser.VIRGULA);
                this.state = 140;
                this.inicializacaoArray();
                }
                }
                this.state = 145;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 146;
            this.match(PortugolParser.FECHA_CHAVES);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public linhaMatriz(): LinhaMatrizContext {
        let localContext = new LinhaMatrizContext(this.context, this.state);
        this.enterRule(localContext, 14, PortugolParser.RULE_linhaMatriz);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 148;
            this.tamanhoArray();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public colunaMatriz(): ColunaMatrizContext {
        let localContext = new ColunaMatrizContext(this.context, this.state);
        this.enterRule(localContext, 16, PortugolParser.RULE_colunaMatriz);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 150;
            this.tamanhoArray();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaracaoArray(): DeclaracaoArrayContext {
        let localContext = new DeclaracaoArrayContext(this.context, this.state);
        this.enterRule(localContext, 18, PortugolParser.RULE_declaracaoArray);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 152;
            this.match(PortugolParser.ID);
            this.state = 153;
            this.match(PortugolParser.ABRE_COLCHETES);
            this.state = 155;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 209715202) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 4137027) !== 0)) {
                {
                this.state = 154;
                this.tamanhoArray();
                }
            }

            this.state = 157;
            this.match(PortugolParser.FECHA_COLCHETES);
            this.state = 160;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 158;
                this.match(PortugolParser.OP_ATRIBUICAO);
                this.state = 159;
                this.inicializacaoArray();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public inicializacaoArray(): InicializacaoArrayContext {
        let localContext = new InicializacaoArrayContext(this.context, this.state);
        this.enterRule(localContext, 20, PortugolParser.RULE_inicializacaoArray);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 162;
            this.match(PortugolParser.ABRE_CHAVES);
            this.state = 164;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 209715202) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 4137027) !== 0)) {
                {
                this.state = 163;
                this.listaExpressoes();
                }
            }

            this.state = 166;
            this.match(PortugolParser.FECHA_CHAVES);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tamanhoArray(): TamanhoArrayContext {
        let localContext = new TamanhoArrayContext(this.context, this.state);
        this.enterRule(localContext, 22, PortugolParser.RULE_tamanhoArray);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.expressao(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaracaoFuncao(): DeclaracaoFuncaoContext {
        let localContext = new DeclaracaoFuncaoContext(this.context, this.state);
        this.enterRule(localContext, 24, PortugolParser.RULE_declaracaoFuncao);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(PortugolParser.FUNCAO);
            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 7) {
                {
                this.state = 171;
                this.match(PortugolParser.TIPO);
                }
            }

            this.state = 174;
            this.match(PortugolParser.ID);
            this.state = 175;
            this.parametroFuncao();
            this.state = 176;
            this.match(PortugolParser.ABRE_CHAVES);
            this.state = 180;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 211365762) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 4137027) !== 0)) {
                {
                {
                this.state = 177;
                this.comando();
                }
                }
                this.state = 182;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 183;
            this.match(PortugolParser.FECHA_CHAVES);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parametroFuncao(): ParametroFuncaoContext {
        let localContext = new ParametroFuncaoContext(this.context, this.state);
        this.enterRule(localContext, 26, PortugolParser.RULE_parametroFuncao);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 185;
            this.match(PortugolParser.ABRE_PARENTESES);
            this.state = 187;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 7) {
                {
                this.state = 186;
                this.listaParametros();
                }
            }

            this.state = 189;
            this.match(PortugolParser.FECHA_PARENTESES);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public listaParametros(): ListaParametrosContext {
        let localContext = new ListaParametrosContext(this.context, this.state);
        this.enterRule(localContext, 28, PortugolParser.RULE_listaParametros);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 191;
            this.parametro();
            this.state = 196;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 64) {
                {
                {
                this.state = 192;
                this.match(PortugolParser.VIRGULA);
                this.state = 193;
                this.parametro();
                }
                }
                this.state = 198;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parametro(): ParametroContext {
        let localContext = new ParametroContext(this.context, this.state);
        this.enterRule(localContext, 30, PortugolParser.RULE_parametro);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 199;
            this.match(PortugolParser.TIPO);
            this.state = 201;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 46) {
                {
                this.state = 200;
                this.match(PortugolParser.E_COMERCIAL);
                }
            }
